<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_page_input_consignee_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/shape_token_order_card_bg"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_take_goods" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_take_info"
            android:textColor="@color/fontColor"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_take_address"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_take_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:lineSpacingExtra="9dp"
            android:textColor="@color/fontColor"
            android:textSize="15sp" />

    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_floor_door_number"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <com.rainwood.tools.wheel.view.ClearEditText
            android:id="@+id/et_floor_door"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/text_write_input" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_contact_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_contact"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <com.rainwood.tools.wheel.view.ClearEditText
            android:id="@+id/et_contact_name"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/text_input_contact_name" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_tel_number"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/text_tel_number"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <com.rainwood.tools.wheel.view.ClearEditText
            android:id="@+id/et_tel_number"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/text_input_tel_number"
            android:inputType="phone"
            app:regexType="mobile" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_button_gradient_bg"
        android:text="@string/common_text_confirm" />
</LinearLayout>