<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/include_title_bar" />

    <View style="@style/HorizontalLineStyle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_head_photo"
                android:textColor="@color/middleColor"
                android:textSize="14sp" />

            <com.rainwood.tools.wheel.widget.SettingBar
                android:id="@+id/fl_head_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_white"
                app:bar_rightIcon="@drawable/ic_right_arrow">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_head_photo"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="17dp"
                    android:layout_marginBottom="20dp"
                    tools:src="@drawable/ic_default_head" />

            </com.rainwood.tools.wheel.widget.SettingBar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_nick"
                android:textColor="@color/middleColor"
                android:textSize="14sp" />

            <com.rainwood.tools.wheel.view.ClearEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_write_input" />

            <View style="@style/HorizontalLineStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_tel_number"
                android:textColor="@color/middleColor"
                android:textSize="14sp" />

            <com.rainwood.tools.wheel.view.ClearEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_write_input"
                android:inputType="phone"
                app:regexType="mobile" />

            <View style="@style/HorizontalLineStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/text_sign"
                android:textColor="@color/middleColor"
                android:textSize="14sp" />

            <com.rainwood.tools.wheel.view.ClearEditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_introduce_self" />

            <View style="@style/HorizontalLineStyle" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>