<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_token_order_card_bg"
    android:orientation="vertical"
    tools:ignore="UselessParent,RelativeOverlap,NestedWeights,SmallSp,RtlSymmetry">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_goods_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_goods_label"
            android:paddingStart="9dp"
            android:paddingTop="6dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="货物1"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_goods_delete" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_estimated_volume"
            android:textColor="@color/fontColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="1m=100cm"
            android:textColor="@color/labelColor"
            android:textSize="12sp" />

    </RelativeLayout>

    <!-- 长宽高 start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/shape_goods_size_bg"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_length"
                android:textColor="@color/middleColor"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_length"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                app:regexType="count" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_unit_cm"
                android:textColor="@color/middleColor"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/shape_goods_size_bg"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_width"
                android:textColor="@color/middleColor"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_width"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                app:regexType="count" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_unit_cm"
                android:textColor="@color/middleColor"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/shape_goods_size_bg"
            android:gravity="center_vertical"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_height"
                android:textColor="@color/middleColor"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_height"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                app:regexType="count" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_unit_cm"
                android:textColor="@color/middleColor"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
    <!-- 长宽高 end-->

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_goods_size_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="您填写的体积约1个冰箱大小"
        android:textColor="@color/blue10"
        android:textSize="12sp"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_goods"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="20dp"
        android:src="@mipmap/temp_goods"
        android:visibility="gone" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/text_goods_type"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <com.rainwood.tools.wheel.view.ClearEditText
            android:id="@+id/et_goods_type"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="end"
            android:hint="@string/text_write_input" />

    </RelativeLayout>

    <!-- 货物的数量 start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="18dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        android:paddingBottom="18dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_goods_num"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_reduce_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_goods_num_left_bg"
            android:paddingStart="10dp"
            android:paddingTop="11dp"
            android:paddingEnd="10dp"
            android:paddingBottom="11dp"
            android:text="@string/text_reduce_line"
            android:textColor="@color/labelColor"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_goods_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_goods_num_center_bg"
            android:lineSpacingExtra="18dp"
            android:paddingStart="18dp"
            android:paddingTop="11dp"
            android:paddingEnd="18dp"
            android:paddingBottom="11dp"
            android:text="1"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_plus_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_goods_num_right_bg"
            android:paddingStart="10dp"
            android:paddingTop="11dp"
            android:paddingEnd="10dp"
            android:paddingBottom="11dp"
            android:text="@string/text_plus_line"
            android:textColor="@color/labelColor"
            android:textSize="15sp" />

    </LinearLayout>
    <!-- 货物的数量 end-->

    <!-- 保价 start-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:gravity="center_vertical"
        android:paddingTop="18dp"
        android:paddingBottom="18dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_safe_price"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_doubt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:src="@drawable/ic_doubt" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_safe_rule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/text_safe_price_rule"
            android:textColor="@color/blue05"
            android:textSize="11sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_safe_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/text_choose_please"
            android:paddingEnd="5dp"
            android:textColor="@color/labelColor2"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_right_arrow" />

    </LinearLayout>
    <!-- 保价 end-->

    <!-- 收货地址 start-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:paddingTop="18dp"
        android:paddingBottom="18dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_take_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/text_take_address"
            android:textColor="@color/middleColor"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_right_arrow" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/iv_arrow"
            android:layout_toEndOf="@+id/tv_take_address_title"
            android:gravity="end"
            android:hint="@string/text_choose_please"
            android:textColor="@color/fontColor"
            android:textSize="15sp" />

    </RelativeLayout>
    <!-- 收货地址 end-->

</LinearLayout>